--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Menu - Formerly Neely Menu</title>
+    <link rel="icon" type="image/png" href="faicon-32x32.png">
     <link rel="stylesheet" href="menu.css" />
     <link
       rel="stylesheet"
@@ -33,7 +34,7 @@
     </div>
     
     <div>
-        <h1>Hamburger Menus 101!</h1>
+        <h1>Tech Menu - Formerly Neely Menu</h1>
         <p>Read all about it!</p>
         <div class="centerImage">
             <img src="web2.jpg" alt="Web Programming">
