--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Menu - Formerly Neely Menu</title>
-    <link rel="icon" type="image/png" href="faicon-32x32.png">
-    <link rel="stylesheet" href="menu.css" />
+   
+    <link rel="stylesheet" href="menu.css" /> <link rel="icon" type="image/png" href="favicon-32x32.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
